Fixed bottom totals css and html

--- a/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
+++ b/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
@@ -9285,6 +9285,7 @@ display: block;
 margin: 0 auto;
 width: 40%;
 text-align: center;
+font-weight: bold;
 }
 .pointerouter {
     background: #333;
