cmall changes to bootstrapwp.css

--- a/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
+++ b/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
@@ -9349,3 +9349,14 @@ padding: 15px;
 color: inherit;
 text-decoration: none;
 }
+
+.404div {
+height: 100px;
+width: 200px;
+margin: 0 auto;
+padding: 119px;
+font-size: 108px;
+text-shadow: -2px -2px #ccc;
+color: #eee;
+line-height: 70px;
+}
