--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -13,6 +13,12 @@
 
 
 /* JUST FOR EDITING - REMOVE AFTER PUTTING IN BOOTSTRAP  */
+.panel-heading > .btn-toolbar > .btn-group > a {
+  position:relative;
+}
+.rightbar{
+display:none;
+}
 .span6 .hover-huge {
   margin:20px auto;
 }
@@ -151,7 +157,7 @@ margin-bottom:5px;
   display: table-cell;
   float: left;
   padding:3px 15px 3px 15px;
-  margin-right: 40px;
+  margin-right: 15px;
 }
 .example {
     border: 1px solid #DDD;
