--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -278,6 +278,9 @@ margin-bottom:5px;
 .drive-hdd {
   background-image: url('/wp-content/uploads/drive_disk.png');
 }
+.drive-folder {
+  background-image: url('/wp-content/uploads/folder.png');
+}
 .server-icon {
   width: 72px;
   height: 72px;
