--- a/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
+++ b/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
@@ -9000,7 +9000,6 @@ blockquote:before {
 	width:100%;
 	height:100%;
 	
-	background-image:url('http://us.newwww.elastichosts.com/wp-content/uploads/2013/01/tint.png');
 }
 
 .popup-inner{
@@ -9198,8 +9197,10 @@ a.freetrialtop {
   border-radius: 4px;
 }
 
-a.freetrialtop:hover {
-  text-shadow: 0px 2px 2px rgba(150, 150, 150, 1);
+a.freetrialtop:hover, a.signup:hover {
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 2px rgba(0,0,0,0.2);
 }
 
 a.newsletter-link, .newsletter-link{
