--- a/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
+++ b/wp-content/themes/bootstrapwp-87/less/bootstrapwp.css
@@ -9197,10 +9197,12 @@ a.freetrialtop {
   border-radius: 4px;
 }
 
-a.freetrialtop:hover, a.signup:hover {
+a.freetrialtop:hover, a.signup:hover, .yellow-nohover:hover {
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
   -webkit-box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  text-decoration: none;
+  color: white;
 }
 
 a.newsletter-link, .newsletter-link{
@@ -9251,11 +9253,6 @@ a.newsletter-link:hover, .newsletter-link:hover{
     background-color: #fbac29;
     text-decoration: none;
     border-radius: 4px;
-}
-.yellow-nohover:hover{
-    text-shadow: 0px 2px 2px rgba(100, 100, 100, 0.5);
-    text-decoration: none;
-    color: white;
 }
 .blue-hover {
     border: 1px solid #2296ff;
