--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -444,3 +444,37 @@ div.pricing-stuff div.popover {
   text-align: center;
   padding: 10px;
 }
+
+.stack {
+  position: relative; z-index: 10;
+}
+
+/* Image styles */
+.stack .server {
+  max-width: 100%; height: auto; vertical-align: bottom; border: 7px solid #fff; border-radius: 3px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.stack .border {
+  content: "";
+  border-radius: 3px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border: 10px solid #fff;
+  left: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  /* -webkit-transition: 0.3s all ease-out; */
+  /*-moz-transition: 0.3s all ease-out;*/
+  /* transition: 0.3s all ease-out; */
+}
