--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -341,14 +341,8 @@ li.slider-definition {
   white-space: nowrap;
   overflow: auto;
 }
-.my-server {
-  background-color: rgba(100, 100, 100, 0.1);
-}
 .text-right {
   text-align: right;
-}
-.panel-body {
-  background-color: rgba(100, 100, 100, 0.1);
 }
 ul.my-modal-ul {
   list-style-type: none;
@@ -428,7 +422,7 @@ ul.my-modal-ul {
   margin-bottom: 10px
 }
 div.pricing-stuff div.popover {
-  z-index: 1000;
+  z-index: 4;
 }
 #subscription .modal-body ul {
   width: 225px;
@@ -446,18 +440,33 @@ div.pricing-stuff div.popover {
 }
 
 .stack {
-  position: relative; z-index: 10;
+  position: relative;
+  z-index: 6;
+  margin-bottom: 20px;
+}
+
+.modal-backdrop {
+  z-index: 7;
+}
+.modal-body {
+  z-index: 1500;
 }
 
 /* Image styles */
 .stack .server {
-  max-width: 100%; height: auto; vertical-align: bottom; border: 7px solid #fff; border-radius: 3px;
+  max-width: 100%;
+  height: auto;
+  vertical-align: bottom;
+  border: 3px solid rgba(0, 0, 0, 0.4);
+  border-radius: 3px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  padding: 6px;
+  background-color: white;
 }
 
 .stack .border {
@@ -466,15 +475,16 @@ div.pricing-stuff div.popover {
   width: 100%;
   height: 100%;
   position: absolute;
-  border: 10px solid #fff;
+  border: 3px solid rgba(0, 0, 0, 0.4);
   left: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
   /* -webkit-transition: 0.3s all ease-out; */
-  /*-moz-transition: 0.3s all ease-out;*/
+  /* -moz-transition: 0.3s all ease-out; */
   /* transition: 0.3s all ease-out; */
+  background-color: white;
 }
