--- a/wp-content/themes/bootstrapwp-87/less/common.css
+++ b/wp-content/themes/bootstrapwp-87/less/common.css
@@ -60,6 +60,8 @@
 }
 [data-bind="template: { name: 'account-details-template', data: account_details }"] {
   padding: 15px 0px 0px 0px;
+  border: 3px solid rgba(0, 0, 0, 0.4);
+  border-radius: 3px;
 }
 .pricing-stuff a {
   cursor:pointer;
@@ -86,7 +88,7 @@
   display: inline-block;
   zoom: 1;
   opacity: 0.6;
-  padding: 7px;
+  padding: 12px;
   max-width: 100px;
   vertical-align: top;
   cursor: pointer;
@@ -480,7 +482,7 @@ div.pricing-stuff div.popover {
   /* transition: 0.3s all ease-out; */
   background-color: white;
 }
-
+/* Changes upper handle to blue triangle
 .upper-handle {
 top: -10px;
 border-left: 10px solid transparent;
@@ -491,3 +493,4 @@ height: 3px;
 background: none;
 border-bottom: none;
 }
+*/
